@@ -5,14 +5,14 @@ SHA256 10cb77286a419a6ee4949f47cdc434b5bbff22d00d714fd6b079a4eb172331e0 files/50
 DIST bbdb-2.35.tar.gz 393097 RMD160 efa04f4ea1428f591bd20738f8c7d0c5f3a919e8 SHA1 7524dd2b3951b4635c606e673c97b85c9cf0621c SHA256 3fb1316e2ed74d47ca61187fada550e58797467bd9e8ad67343ed16da769f916
 DIST dates.el 7048 RMD160 f8428bf5614031b907fc1395b3d4f3e59345649b SHA1 9ea9095a24dc7f1b09c4173301ef32d412aeeacf SHA256 8de33f7b00ac1766eb104c1bf2f362aff54e3de4d67cbd0a4da1b6b137363ec4
 DIST point-at.el 440 RMD160 139834d869575df5b826e681e37f3d0f769af789 SHA1 f7dcaa6091dd2f89a95293bc6c534630f0461b7c SHA256 c9695455b96f17fbebc9cf0ae21b042fb04b688016279010d87c01e9d270e0c8
-EBUILD bbdb-2.35.ebuild 1729 RMD160 de2b06426a6cd7ac1205367e10276559809086ce SHA1 d65fb6de86078115a60da40e395e9bf99f3dd7de SHA256 1a5c1b5add049b97ec24b2674e143a468d2a2af7089aea0611ca7d3183aea8ad
-MD5 a5eb9b1f056ba55b26b3e74f435c8ac0 bbdb-2.35.ebuild 1729
-RMD160 de2b06426a6cd7ac1205367e10276559809086ce bbdb-2.35.ebuild 1729
-SHA256 1a5c1b5add049b97ec24b2674e143a468d2a2af7089aea0611ca7d3183aea8ad bbdb-2.35.ebuild 1729
-MISC ChangeLog 570 RMD160 6444358f05160b238152ef0fb15fdce6d87d37d5 SHA1 c2dabff0e7766ffc7387bf5104311e8e92576907 SHA256 7e05238b8dc61f9bce7fea5dcc11eaa26af759ad527d7e571bd533181234755f
-MD5 bea360fd440601c044107b5531fe1954 ChangeLog 570
-RMD160 6444358f05160b238152ef0fb15fdce6d87d37d5 ChangeLog 570
-SHA256 7e05238b8dc61f9bce7fea5dcc11eaa26af759ad527d7e571bd533181234755f ChangeLog 570
+EBUILD bbdb-2.35.ebuild 1753 RMD160 45fcb1f9a36619fbb1df386b0a19dd9333edf135 SHA1 7681f8c589d39978a4e7b0e8d7c20d139c07a340 SHA256 92818a48ca7d73492a1bc490e4447a3500f1c626c160bd09ca93e4b2847d9f3d
+MD5 f7f2ce7b2c91f730ebcf1c63e2ae0656 bbdb-2.35.ebuild 1753
+RMD160 45fcb1f9a36619fbb1df386b0a19dd9333edf135 bbdb-2.35.ebuild 1753
+SHA256 92818a48ca7d73492a1bc490e4447a3500f1c626c160bd09ca93e4b2847d9f3d bbdb-2.35.ebuild 1753
+MISC ChangeLog 694 RMD160 053df68fd5834d7180dfd1a9c1e4e25994e28c57 SHA1 ada9eaedc6f0c6a6af70ea67225ec6133581101e SHA256 59bc704ba6ff51ca04e4185de73e5b99865822e84601e5c857ed5e868483c09f
+MD5 6c4506bf8c0228e9113f26e0be2e66a0 ChangeLog 694
+RMD160 053df68fd5834d7180dfd1a9c1e4e25994e28c57 ChangeLog 694
+SHA256 59bc704ba6ff51ca04e4185de73e5b99865822e84601e5c857ed5e868483c09f ChangeLog 694
 MISC metadata.xml 158 RMD160 415d172437ca754d24fc5ab186ba8e77934d96e4 SHA1 61f6eff9729cd87a725c2a70c81aca4270a17fc4 SHA256 1393bdef3a74343fdb40a112c7096a1af16f67e7a43413250de28dfe73810eab
 MD5 fcd33d07e4ee719b01157946734f4fe8 metadata.xml 158
 RMD160 415d172437ca754d24fc5ab186ba8e77934d96e4 metadata.xml 158
